src/v8/CAPI_Transformers.pas

UNIT CAPI_Transformers;
{$inline on}

INTERFACE

USES CAPI_Utils;

PROCEDURE Transformers_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PInteger);cdecl;
function Transformers_Get_First():Integer;cdecl;
function Transformers_Get_IsDelta():WordBool;cdecl;
function Transformers_Get_kV():Double;cdecl;
function Transformers_Get_kVA():Double;cdecl;
function Transformers_Get_MaxTap():Double;cdecl;
function Transformers_Get_MinTap():Double;cdecl;
function Transformers_Get_Name():PAnsiChar;cdecl;
function Transformers_Get_Next():Integer;cdecl;
function Transformers_Get_NumTaps():Integer;cdecl;
function Transformers_Get_NumWindings():Integer;cdecl;
function Transformers_Get_R():Double;cdecl;
function Transformers_Get_Rneut():Double;cdecl;
function Transformers_Get_Tap():Double;cdecl;
function Transformers_Get_Wdg():Integer;cdecl;
function Transformers_Get_XfmrCode():PAnsiChar;cdecl;
function Transformers_Get_Xhl():Double;cdecl;
function Transformers_Get_Xht():Double;cdecl;
function Transformers_Get_Xlt():Double;cdecl;
function Transformers_Get_Xneut():Double;cdecl;
procedure Transformers_Set_IsDelta(Value: WordBool);cdecl;
procedure Transformers_Set_kV(Value: Double);cdecl;
procedure Transformers_Set_kVA(Value: Double);cdecl;
procedure Transformers_Set_MaxTap(Value: Double);cdecl;
procedure Transformers_Set_MinTap(Value: Double);cdecl;
procedure Transformers_Set_Name(const Value: PAnsiChar);cdecl;
procedure Transformers_Set_NumTaps(Value: Integer);cdecl;
procedure Transformers_Set_NumWindings(Value: Integer);cdecl;
procedure Transformers_Set_R(Value: Double);cdecl;
procedure Transformers_Set_Rneut(Value: Double);cdecl;
procedure Transformers_Set_Tap(Value: Double);cdecl;
procedure Transformers_Set_Wdg(Value: Integer);cdecl;
procedure Transformers_Set_XfmrCode(const Value: PAnsiChar);cdecl;
procedure Transformers_Set_Xhl(Value: Double);cdecl;
procedure Transformers_Set_Xht(Value: Double);cdecl;
procedure Transformers_Set_Xlt(Value: Double);cdecl;
procedure Transformers_Set_Xneut(Value: Double);cdecl;
function Transformers_Get_Count():Integer;cdecl;

IMPLEMENTATION

USES CAPI_Constants, DSSGlobals, Executive, Transformer, SysUtils, PointerList;

function ActiveTransformer: TTransfObj;
begin
  Result := nil;
  if ActiveCircuit[ActiveActor] <> Nil then Result := ActiveCircuit[ActiveActor].Transformers.Active;
end;

// assuming the active winding has already been set
//------------------------------------------------------------------------------
procedure Set_Parameter(const parm: string; const val: string);
var
  cmd: string;
begin
  if not Assigned (ActiveCircuit[ActiveActor]) then exit;
  SolutionAbort := FALSE;  // Reset for commands entered from outside
  cmd := Format ('transformer.%s.%s=%s', [ActiveTransformer.Name, parm, val]);
  DSSExecutive.Command := cmd;
end;
//------------------------------------------------------------------------------
PROCEDURE Transformers_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PInteger);cdecl;
VAR
  Result: PPAnsiCharArray;
  elem: TTransfObj;
  lst: TPointerList;
  k: Integer;
Begin
  Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, (0) + 1);
  Result[0] := DSS_CopyStringAsPChar('NONE');
  IF ActiveCircuit[ActiveActor] <> Nil THEN WITH ActiveCircuit[ActiveActor] DO
  If Transformers.ListSize > 0 Then
    Begin
      lst := Transformers;
      DSS_RecreateArray_PPAnsiChar(Result, ResultPtr, ResultCount, (lst.ListSize-1) + 1);
      k:=0;
      elem := lst.First;
      WHILE elem<>Nil DO Begin
        Result[k] := DSS_CopyStringAsPChar(elem.Name);
        Inc(k);
        elem := lst.Next;
      End;
    End;
end;
//------------------------------------------------------------------------------
function Transformers_Get_First():Integer;cdecl;
Var
  elem: TTransfObj;
  lst: TPointerList;
Begin
  Result := 0;
  If ActiveCircuit[ActiveActor] <> Nil Then begin
    lst := ActiveCircuit[ActiveActor].Transformers;
    elem := lst.First;
    If elem <> Nil Then Begin
      Repeat
        If elem.Enabled Then Begin
          ActiveCircuit[ActiveActor].ActiveCktElement := elem;
          Result := 1;
        End
        Else elem := lst.Next;
      Until (Result = 1) or (elem = nil);
    End;
  End;
end;
//------------------------------------------------------------------------------
function Transformers_Get_IsDelta():WordBool;cdecl;
var
  elem: TTransfObj;
begin
  Result := FALSE;
  elem := ActiveTransformer;
  if elem <> nil then
    if elem.WdgConnection[elem.ActiveWinding] > 0 then Result := TRUE;
end;
//------------------------------------------------------------------------------
function Transformers_Get_kV():Double;cdecl;
var
  elem: TTransfObj;
begin
  Result := 0.0;
  elem := ActiveTransformer;
  if elem <> nil then
    Result := elem.Winding^[elem.ActiveWinding].kvll;
end;
//------------------------------------------------------------------------------
function Transformers_Get_kVA():Double;cdecl;
var
  elem: TTransfObj;
begin
  Result := 0.0;
  elem := ActiveTransformer;
  if elem <> nil then
    Result := elem.WdgKVA[elem.ActiveWinding];
end;
//------------------------------------------------------------------------------
function Transformers_Get_MaxTap():Double;cdecl;
var
  elem: TTransfObj;
begin
  Result := 0.0;
  elem := ActiveTransformer;
  if elem <> nil then
    Result := elem.Maxtap[elem.ActiveWinding];
end;
//------------------------------------------------------------------------------
function Transformers_Get_MinTap():Double;cdecl;
var
  elem: TTransfObj;
begin
  Result := 0.0;
  elem := ActiveTransformer;
  if elem <> nil then
    Result := elem.Mintap[elem.ActiveWinding];
end;
//------------------------------------------------------------------------------
function Transformers_Get_Name_AnsiString():AnsiString;inline;
Var
  elem: TTransfObj;
Begin
  Result := '';
  If ActiveCircuit[ActiveActor] <> Nil Then Begin
    elem := ActiveCircuit[ActiveActor].Transformers.Active;
    If elem <> Nil Then Result := elem.Name;
  End;
end;

function Transformers_Get_Name():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Transformers_Get_Name_AnsiString());
end;
//------------------------------------------------------------------------------
function Transformers_Get_Next():Integer;cdecl;
Var
  elem: TTransfObj;
  lst: TPointerList;
Begin
  Result := 0;
  If ActiveCircuit[ActiveActor] <> Nil Then Begin
    lst := ActiveCircuit[ActiveActor].Transformers;
    elem := lst.Next;
    if elem <> nil then begin
      Repeat
        If elem.Enabled Then Begin
          ActiveCircuit[ActiveActor].ActiveCktElement := elem;
          Result := lst.ActiveIndex;
        End
        Else elem := lst.Next;
      Until (Result > 0) or (elem = nil);
    End
  End;
end;
//------------------------------------------------------------------------------
function Transformers_Get_NumTaps():Integer;cdecl;
var
  elem: TTransfObj;
begin
  Result := 0;
  elem := ActiveTransformer;
  if elem <> nil then
    Result := elem.NumTaps[elem.ActiveWinding];
end;
//------------------------------------------------------------------------------
function Transformers_Get_NumWindings():Integer;cdecl;
var
  elem: TTransfObj;
begin
  Result := 0;
  elem := ActiveTransformer;
  if elem <> nil then Result := elem.NumberOfWindings;
end;
//------------------------------------------------------------------------------
function Transformers_Get_R():Double;cdecl;
var
  elem: TTransfObj;
begin
  Result := 0.0;
  elem := ActiveTransformer;
  if elem <> nil then
    Result := elem.WdgResistance[elem.ActiveWinding];
end;
//------------------------------------------------------------------------------
function Transformers_Get_Rneut():Double;cdecl;
var
  elem: TTransfObj;
begin
  Result := 0.0;
  elem := ActiveTransformer;
  if elem <> nil then
    Result := elem.WdgRneutral[elem.ActiveWinding];
end;
//------------------------------------------------------------------------------
function Transformers_Get_Tap():Double;cdecl;
var
  elem: TTransfObj;
begin
  Result := 0.0;
  elem := ActiveTransformer;
  if elem <> nil then
    Result := elem.PresentTap[elem.ActiveWinding,ActiveActor];
end;
//------------------------------------------------------------------------------
function Transformers_Get_Wdg():Integer;cdecl;
var
  elem: TTransfObj;
begin
  Result := 0;
  elem := ActiveTransformer;
  if elem <> nil then Result := elem.ActiveWinding;
end;
//------------------------------------------------------------------------------
function Transformers_Get_XfmrCode_AnsiString():AnsiString;inline;
var
  elem: TTransfObj;
begin
  Result := '';
  elem := ActiveTransformer;
  if elem <> nil then Result := elem.XfmrCode;
end;
